2011-02-18  chris reiss  <christopher.reiss@nokia.com>

Reviewed by Andreas Kling.

        REGRESSION: Date.parse("Tue Nov 23 20:40:05 2010 GMT") returns NaN
        https://bugs.webkit.org/show_bug.cgi?id=49989

        * fast/js/date-parse-test-expected.txt:
        * fast/js/script-tests/date-parse-test.js:
2011-02-18  chris reiss  <christopher.reiss@nokia.com>

        Reviewed by Andreas Kling.

        REGRESSION: Date.parse("Tue Nov 23 20:40:05 2010 GMT") returns NaN
        https://bugs.webkit.org/show_bug.cgi?id=49989

        updated test fast/js/script-tests/date-parse-test.js

        * wtf/DateMath.cpp:
        (WTF::parseDateFromNullTerminatedCharacters):

Canonical link: https://commits.webkit.org/69015@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79060 268f45cc-cd09-0410-ab3c-d52691b4dbfc